--- a/index.html
+++ b/index.html
@@ -185,5 +185,8 @@
     <!-- FOOTER START -->
     <footer>&copy 2024 | Kevin Pangestu</footer>
     <!-- FOOTER END -->
+
+    <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   </body>
 </html>
