add alert warning with JS, optimize SEO

--- a/index.html
+++ b/index.html
@@ -6,6 +6,21 @@
     <link rel="stylesheet" href="style.css" />
     <meta name="description" content="Portofolio Kevin Pangestu" />
     <meta name="author" content="Kevin Pangestu" />
+    <!-- add meta tag for SEO -->
+    <meta
+      name="keywords"
+      content="Kevin Pangestu, Front-End Developer, Portfolio, Web Development"
+    />
+    <meta property="og:title" content="Kevin Pangestu - Front-End Developer" />
+    <meta
+      property="og:description"
+      content="Kevin's portfolio showcasing front-end development projects"
+    />
+    <meta
+      property="og:image"
+      content="/assets/front-end-developer-profilepic-3.jpeg"
+    />
+
     <title>Kevin Pangestu</title>
   </head>
   <body class="bg-dark-1">
@@ -16,8 +31,10 @@
           <a href="#home">
             <img
               src="/assets/front-end-developer-profilepic-3.jpeg"
-              alt="logo"
+              alt="logo kevin pangestu"
+              loading="lazy"
             />
+            <!-- add lazy loading -->
           </a>
         </div>
         <div class="nav-menu">
@@ -56,12 +73,14 @@
               <img
                 src="/assets/front-end-developer-profilepic-3.jpeg"
                 alt="Kevin Pangestu"
+                loading="lazy"
               />
             </div>
           </div>
         </div>
       </header>
       <!-- HEADER END -->
+
       <!-- MAIN START -->
       <main>
         <!-- PROJECTS START -->
@@ -71,15 +90,27 @@
               <h2>Projects</h2>
               <div class="projects-list">
                 <div class="projects-item">
-                  <img src="/assets/projects-cartoon-1.jpeg" alt="project-1" />
+                  <img
+                    src="/assets/projects-cartoon-1.jpeg"
+                    alt="project-1"
+                    loading="lazy"
+                  />
                   <h3>Company Profile</h3>
                 </div>
                 <div class="projects-item">
-                  <img src="/assets/projects-cartoon-2.jpeg" alt="project-2" />
+                  <img
+                    src="/assets/projects-cartoon-2.jpeg"
+                    alt="project-2"
+                    loading="lazy"
+                  />
                   <h3>Portfolio</h3>
                 </div>
                 <div class="projects-item">
-                  <img src="/assets/projects-cartoon-3.jpeg" alt="project-3" />
+                  <img
+                    src="/assets/projects-cartoon-3.jpeg"
+                    alt="project-3"
+                    loading="lazy"
+                  />
                   <h3>E-commerce</h3>
                 </div>
               </div>
@@ -95,7 +126,11 @@
               <h2>Testimonials</h2>
               <div class="testimonials-list">
                 <div class="testimonials-item">
-                  <img src="/assets/testimonials-1.jpeg" alt="testimonials-2" />
+                  <img
+                    src="/assets/testimonials-1.jpeg"
+                    alt="John Smith, TechWave Solutions"
+                    loading="lazy"
+                  />
                   <h3>John Smith, TechWave Solutions</h3>
                   <div class="testimonials-text">
                     <p>
@@ -107,7 +142,11 @@
                   </div>
                 </div>
                 <div class="testimonials-item">
-                  <img src="/assets/testimonials-2.jpeg" alt="testimonials-2" />
+                  <img
+                    src="/assets/testimonials-2.jpeg"
+                    alt="Eduardo, Creative Minds Inc"
+                    loading="lazy"
+                  />
                   <h3>Eduardo, Creative Minds Inc</h3>
                   <div class="testimonials-text">
                     <p>
@@ -119,7 +158,11 @@
                   </div>
                 </div>
                 <div class="testimonials-item">
-                  <img src="/assets/testimonials-3.jpeg" alt="testimonials-2" />
+                  <img
+                    src="/assets/testimonials-3.jpeg"
+                    alt="Rebecca, providing feedback"
+                    loading="lazy"
+                  />
                   <h3>Rebecca, Freelance Designer</h3>
                   <div class="testimonials-text">
                     <p>
