add hamburger button draft

--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
             <!-- add lazy loading -->
           </a>
         </div>
+        <!-- HAMBURGER START -->
+        <div class="hamburger" id="hamburger">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <!-- HAMBURGER END -->
+
         <div class="nav-menu">
           <ul class="text-white">
             <li><a href="#home">Home</a></li>
