--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
         <!-- HAMBURGER END -->
 
-        <div class="nav-menu">
+        <div class="nav-menu" id="nav-menu">
           <ul class="text-white">
             <li><a href="#home">Home</a></li>
             <li><a href="#projects">Projects</a></li>
