add min and max length in form

--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
                     id="nameForm"
                     name="partnerName"
                     placeholder="Your Name"
+                    maxlength="50"
                     required
                   />
                 </div>
@@ -211,6 +212,7 @@
                     id="subjectForm"
                     name="subject"
                     placeholder="Subject..."
+                    maxlength="50"
                     required
                   />
                 </div>
@@ -221,6 +223,8 @@
                     id="messageForm"
                     name="message"
                     placeholder="Hi there!"
+                    minlength="10"
+                    maxlength="1000"
                     required
                   ></textarea>
                 </div>
