add class to input, add class to submit button

--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                   <input
                     type="text"
                     id="nameForm"
+                    class="inputForm"
                     name="partnerName"
                     placeholder="Your Name"
                     maxlength="50"
@@ -210,6 +211,7 @@
                   <input
                     type="text"
                     id="subjectForm"
+                    class="inputForm"
                     name="subject"
                     placeholder="Subject..."
                     maxlength="50"
@@ -221,6 +223,7 @@
                   <textarea
                     type="textarea"
                     id="messageForm"
+                    class="inputForm"
                     name="message"
                     placeholder="Hi there!"
                     minlength="10"
@@ -228,7 +231,7 @@
                     required
                   ></textarea>
                 </div>
-                <button type="submit">Submit</button>
+                <button type="submit" class="submitForm">Submit</button>
               </form>
             </div>
           </div>
