add blur-layer to content, when hamburger button active

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </div>
     </nav>
     <!-- NAVBAR END -->
-    <div class="main-content">
+    <div class="main-content blur-layer">
       <!-- HEADER START -->
       <header id="home">
         <div class="container">
