add z-index to nav menu add intro-image display toggle for mobile and desktop

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
       <header id="home">
         <div class="container">
           <div class="introduction-container">
+            <div class="intro-image mobile">
+              <img
+                src="/assets/front-end-developer-profilepic-3.jpeg"
+                alt="Kevin Pangestu"
+                loading="lazy"
+              />
+            </div>
             <div class="introduction">
               <h1>
                 Hello! I'm Kevin Pangestu<br />
@@ -78,7 +85,7 @@
                 looking forward to collaborating on exciting projects!"
               </p>
             </div>
-            <div class="intro-image">
+            <div class="intro-image desktop">
               <img
                 src="/assets/front-end-developer-profilepic-3.jpeg"
                 alt="Kevin Pangestu"
